Updates to Rmd slides, should be fairly final

--- a/01-04-rmarkdown/01-04-rmarkdown.html
+++ b/01-04-rmarkdown/01-04-rmarkdown.html
@@ -108,7 +108,7 @@ class: center, middle
 You got some data.
 
 - `WorldCupMatches-01.csv`: Match info for each game in pre-2000 World Cups
-- Codebook at https://github.com/mine-cetinkaya-rundel/repro-compute-isba18/blob/master/01-lit-program/data/README.md#codebook
+- Codebook at https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-04-rmarkdown/data/README.md
 - Ultimate goal: Visualize the total number of goals for each World Cup over time.
 
 .instructions[
