Add link to workshop webpage

--- a/01-00-welcome/01-00-welcome.html
+++ b/01-00-welcome/01-00-welcome.html
@@ -73,6 +73,16 @@ Best practices for configuring and deploying infrastructure for teaching data sc
 
 ---
 
+## Materials
+
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+All materials posted at [bit.ly/teach-data-sci](http://bit.ly/teach-data-sci)
+
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+---
+
 class: center, middle
 
 # Framing
