--- a/01-02-r-rstudio/01-02-r-rstudio.html
+++ b/01-02-r-rstudio/01-02-r-rstudio.html
@@ -75,7 +75,7 @@ we will cover throughout this workshop:
 
 - Literate programming with R Markdown
 - Version control with Git and GitHub
-- Student access to computing without installation
+- Student access to computing without local installation
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
