--- a/02-03-management/02-03-management.html
+++ b/02-03-management/02-03-management.html
@@ -246,18 +246,18 @@ create_individual_repo("icots10-data-sci", users,
 
 ```r
 mirror_repo(
-  source_repo = "icots10-data-sci/demo", 
-  target_repos = get_repos("icots10-data-sci","demo-")
+  source_repo = "icots10-data-sci/hw01", 
+  target_repos = get_repos("icots10-data-sci","hw01-")
 )
 ```
 
 ```
 ## Cloning source repo (Sta523-Fa17/hw2) ...
-## Mirroring icots10-data-sci/demo to icots10-data-sci/demo-Alice ...
-## Mirroring icots10-data-sci/demo to icots10-data-sci/demo-Bob ...
-## Mirroring icots10-data-sci/demo to icots10-data-sci/demo-Carol ...
-## Mirroring icots10-data-sci/demo to icots10-data-sci/demo-Dave ...
-## Mirroring icots10-data-sci/demo to icots10-data-sci/demo-Eve ...
+## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Alice ...
+## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Bob ...
+## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Carol ...
+## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Dave ...
+## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Eve ...
 ## Cleaning up ...
 ```
 
