--- a/02-03-management/02-03-management.html
+++ b/02-03-management/02-03-management.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Course management with GitHub</title>
+    <title>Course management   with GitHub</title>
     <meta charset="utf-8">
     <meta name="author" content="Mine Çetinkaya-Rundel &amp; Colin Rundel" />
     <meta name="date" content="2018-07-08" />
@@ -11,7 +11,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Course management with GitHub
+# Course management <br/> with GitHub
 ## Teaching Data Science, Reproducibly <br> @ ICOTS 2018
 ### Mine Çetinkaya-Rundel &amp; Colin Rundel
 ### July 8, 2018
@@ -30,6 +30,14 @@ Enter your GitHub account in the following google sheet:
 .center[.large[
 http://bit.ly/icots-gh
 ]]
+
+---
+
+## Goals
+
+* Centralize the distribution and collection of all student assignments
+
+* Force students to use version control
 
 ---
 
@@ -252,7 +260,7 @@ mirror_repo(
 ```
 
 ```
-## Cloning source repo (Sta523-Fa17/hw2) ...
+## Cloning source repo (icots10-data-sci/hw01) ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Alice ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Bob ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Carol ...
@@ -279,7 +287,7 @@ You all now should have your own private copy of the demo repository within the 
 
 ## Alternative - GitHub classroom
 
-
+Available here - https://classroom.github.com/classrooms
 
 .center[
 ![](img/classroom.png)
