--- a/02-03-management/02-03-management.html
+++ b/02-03-management/02-03-management.html
@@ -139,14 +139,15 @@ These tokens can be created [here](https://github.com/settings/tokens) and once 
 
 ## Checking tokens
 
-If the token is found and works correctly the following code should run without error,
+If the token is found and works correctly the following code should run without error
+
 
 ```r
 library(ghclass)
 test_github_token()
 ```
 
-If instead the token is invalid or not found, you will see something like the following,
+If instead the token is invalid or not found, you will see something like the following
 
 
 ```r
@@ -267,11 +268,11 @@ mirror_repo(
 
 You all now should have your own private copy of the demo repository within the `icots10-data-sci` organization.
 
-* Go to the page for *your* repo
+* Go to the page for *your* repo.
 
 * Copy the *https* git url for your repo using the clone button.
 
-* Use that url to open a copy of the repo inside of RStudio Cloud
+* Use that url to open a copy of the repo inside of RStudio Cloud.
 
 * Complete the described exercise.
 
