Add note on blame view

--- a/02-03-management/02-03-management.html
+++ b/02-03-management/02-03-management.html
@@ -449,6 +449,8 @@ count: false
 
 - You can open issues in a repository with feedback for the students.
 
+- Use the *blame* view to get specific line references.
+
 - Make sure to `@` mention the student so that they are notified when an issue is opened.
 
 &lt;br/&gt;
